--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,55 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# compiled output
-# /dist
-/tmp
-/out-tsc
+# # compiled output
+# # /dist
+# /tmp
+# /out-tsc
 
-# dependencies
-/node_modules
+# # dependencies
+# /node_modules
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# # IDEs and editors
+# /.idea
+# .project
+# .classpath
+# .c9/
+# *.launch
+# .settings/
+# *.sublime-workspace
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# # IDE - VSCode
+# .vscode/*
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 
-# misc
-/.angular/cache
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-testem.log
-/typings
+# # misc
+# /.angular/cache
+# /.sass-cache
+# /connect.lock
+# /coverage
+# /libpeerconnection.log
+# npm-debug.log
+# testem.log
+# /typings
 
-# System Files
-.DS_Store
-Thumbs.db
-.ng_build
+# # System Files
+# .DS_Store
+# Thumbs.db
+# .ng_build
 
-*.metadata.json
-*.map.js
+# *.metadata.json
+# *.map.js
 
-.ng_pkg_build
+# .ng_pkg_build
 
-dist.tgz
+# dist.tgz
 
-cypress/videos
-/cypress/screenshots/
-projects/ngx-easy-table/node_modules
-.cache
+# cypress/videos
+# /cypress/screenshots/
+# projects/ngx-easy-table/node_modules
+# .cache
+
+#ignotr allfiles
+*
